Stylesheet/emote/tag updates 2014-05-11

--- a/source-css/afterplounge.css
+++ b/source-css/afterplounge.css
@@ -145,7 +145,7 @@ a[href="/trixfunghost"] {width: 261px; height: 150px; background-position: -498p
 a[href="/twifunghost"] {width: 228px; height: 150px; background-position: -534px -325px;}
 
 /* 100 by 140 */
-a[href="/appleghost"], a[href="/cheekydaringdoghost"], a[href="/cheekyvsghost"], a[href="/fsghost"], a[href="/ppghost"], a[href="/rarityghost"], a[href="/rdghost"], a[href="/scootaghost"], a[href="/twilightghost"]{
+a[href="/cheekyajghost"], a[href="/cheekydaringdoghost"], a[href="/cheekyvsghost"], a[href="/cheekyshyghost"], a[href="/cheekyppghost"], a[href="/cheekyraraghost"], a[href="/cheekydashghost"], a[href="/cheekyscootsghost"], a[href="/cheekytwighost"]{
     display: block;
     clear: none;
     float: left;
@@ -153,15 +153,15 @@ a[href="/appleghost"], a[href="/cheekydaringdoghost"], a[href="/cheekyvsghost"],
     height: 140px;
     background-image: url(%%ghostemotes7%%) !important
 }
-a[href="/appleghost"] { width: 100px; height: 140px; background-position: -5px -5px;}
+a[href="/cheekyajghost"] { width: 100px; height: 140px; background-position: -5px -5px;}
 a[href="/cheekydaringdoghost"] { width: 100px; height: 104px; background-position: -115px -5px;}
 a[href="/cheekyvsghost"] { width: 100px; height: 128px; background-position: -225px -5px;}
-a[href="/fsghost"] { width: 100px; height: 137px; background-position: -115px -143px;}
-a[href="/ppghost"] {width: 100px; height: 134px; background-position: -225px -143px;}
-a[href="/rarityghost"] { width: 100px; height: 137px; background-position: -335px -5px;}
-a[href="/rdghost"] { width: 100px; height: 125px; background-position: -335px -152px;}
-a[href="/scootaghost"] { width: 100px; height: 141px; background-position: -5px -287px;}
-a[href="/twilightghost"] { width: 100px; height: 131px; background-position: -225px -287px;}
+a[href="/cheekyshyghost"] { width: 100px; height: 137px; background-position: -115px -143px;}
+a[href="/cheekyppghost"] {width: 100px; height: 134px; background-position: -225px -143px;}
+a[href="/cheekyraraghost"] { width: 100px; height: 137px; background-position: -335px -5px;}
+a[href="/cheekydashghost"] { width: 100px; height: 125px; background-position: -335px -152px;}
+a[href="/cheekyscootsghost"] { width: 100px; height: 141px; background-position: -5px -287px;}
+a[href="/cheekytwighost"] { width: 100px; height: 131px; background-position: -225px -287px;}
 
 /*      
 
