--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -400,7 +400,7 @@ a[href="/pinkiehide"] { width: 70px; height: 70px; background-position: -85px -5
 a[href="/rosecute"] { width: 70px; height: 71px; background-position: -85px -85px; }
 
 /* 100 by 100 */
-a[href="/berryuhh"], a[href="/carrotshock"], a[href="/cheershrug"], a[href="/clickityhack"], a[href="/crystalpinkie"], a[href="/flitterexcite"], a[href="/hwpeekaboo"], a[href="/mmkay"], a[href="/raindropsheh"], a[href="/wmflitter"] {
+a[href="/berryuhh"], a[href="/carrotshock"], a[href="/cheershrug"], a[href="/clickityhack"], a[href="/crystalpinkie"], a[href="/flitterexcite"], a[href="/hwpeekaboo"], a[href="/mmkay"], a[href="/raindropsheh"], a[href="/sunsetplot"], a[href="/wmflitter"] {
     display: block;
     clear: none;
     float: left;
@@ -417,7 +417,8 @@ a[href="/flitterexcite"] { width: 100px; height: 110px; background-position: -22
 a[href="/hwpeekaboo"] { width: 100px; height: 100px; background-position: -5px -235px; }
 a[href="/mmkay"] { width: 100px; height: 100px; background-position: -115px -235px; }
 a[href="/raindropsheh"] { width: 100px; height: 100px; background-position: -225px -235px; }
-a[href="/wmflitter"] { width: 100px; height: 115px; background-position: -335px -5px; }
+a[href="/sunsetplot"] { width: 100px; height: 95px; background-position: -335px -5px; }
+a[href="/wmflitter"] {width: 100px; height: 115px; background-position: -335px -110px; }
 
 /* 100 by 130 */
 a[href="/babsseed"], a[href="/carrotexcite"], a[href="/carrotpose"], a[href="/ccflitcheer"], a[href="/dtlaugh"], a[href="/dtmad"], a[href="/dtreally"], a[href="/dtwut"], a[href="/harshwhinny"], a[href="/msawkward"], a[href="/professionalism"], a[href="/smithlaugh"] {
@@ -442,7 +443,7 @@ a[href="/professionalism"] { width: 100px; height: 130px; background-position: -
 a[href="/smithlaugh"] { width: 100px; height: 120px; background-position: -225px -415px; }
 
 /* 100 by 150 */
-a[href="/cantclop"], a[href="/dtdizzy"], a[href="/flitterblush"], a[href="/flitterfilly"], a[href="/grannygimme"], a[href="/hwnotamused"], a[href="/raindropsconcerned"], a[href="/roseluckheart"], a[href="/rosetease"], a[href="/silverhappy"], a[href="/silverhmm"], a[href="/waffle"] {
+a[href="/cantclop"], a[href="/dtdizzy"], a[href="/flitterblush"], a[href="/flitterfilly"], a[href="/grannygimme"], a[href="/hwnotamused"], a[href="/raindropsconcerned"], a[href="/roseluckheart"], a[href="/rosetease"], a[href="/silverhappy"], a[href="/silverhmm"], a[href="/waffle"], a[href="/winterwat"] {
     display: block;
     clear: none;
     float: left;
@@ -462,9 +463,10 @@ a[href="/rosetease"] { width: 100px; height: 150px; background-position: -445px 
 a[href="/silverhappy"] { width: 100px; height: 140px; background-position: -445px -165px; }
 a[href="/silverhmm"] { width: 100px; height: 140px; background-position: -385px -315px; }
 a[href="/waffle"] { width: 100px; height: 150px; background-position: -5px -465px; }
+a[href="/winterwat"] {width: 100px; height: 151px; background-position: -115px -465px;}
 
 /* 150 by 100 */
-a[href="/abandbabs"], a[href="/berrypounce"] ,a[href="/dtsshaha"], a[href="/flitterstretch"], a[href="/fritteryay"], a[href="/lunabored"], a[href="/nataliapoklonskaya"] {
+a[href="/abandbabs"], a[href="/berrypounce"], a[href="/cheerswoon"], a[href="/dtsshaha"], a[href="/flitterstretch"], a[href="/fritteryay"], a[href="/lunabored"], a[href="/nataliapoklonskaya"], a[href="/wintersleep"]{
     display: block;
     clear: none;
     float: left;
@@ -474,11 +476,13 @@ a[href="/abandbabs"], a[href="/berrypounce"] ,a[href="/dtsshaha"], a[href="/flit
 }
 a[href="/abandbabs"] { width: 150px; height: 100px; background-position: -5px -5px; }
 a[href="/berrypounce"] { width: 150px; height: 100px; background-position: -165px -5px; }
-a[href="/dtsshaha"] { width: 150px; height: 110px; background-position: -5px -115px; }
-a[href="/flitterstretch"] { width: 150px; height: 110px; background-position: -165px -115px; }
-a[href="/fritteryay"] { width: 150px; height: 110px; background-position: -5px -235px; }
-a[href="/lunabored"] { width: 150px; height: 90px; background-position: -165px -235px; }
-a[href="/nataliapoklonskaya"] { width: 195px; height: 100px; background-position: -325px -5px; }
+a[href="/cheerswoon"] {width: 150px; height: 115px; background-position: -5px -115px;}
+a[href="/dtsshaha"] { width: 150px; height: 110px; background-position: -165px -115px; }
+a[href="/flitterstretch"] {width: 150px; height: 110px; background-position: -165px -235px; }
+a[href="/fritteryay"] { width: 150px; height: 110px; background-position: -325px -5px; }
+a[href="/lunabored"] { width: 150px; height: 90px; background-position: -325px -125px; }
+a[href="/nataliapoklonskaya"] { width: 195px; height: 100px; background-position: -325px -225px; }
+a[href="/wintersleep"] {width: 150px; height: 118px; background-position: -5px -335px;}
 
 /* 150 by 130 */
 a[href="/arousing"], a[href="/babsmean"], a[href="/carrotannoyed"], a[href="/flitterlook"], a[href="/flitternotbad"], a[href="/forgiveme"], a[href="/intensegaming"] {
@@ -746,3 +750,30 @@ a[href="/intensifies"]:after {
 }
 
 /*---*/
+
+a[href="/intensifies2"] {
+  color: #000000;
+  text-transform: uppercase;
+  display: block;
+  font-size: 32px;
+  animation: intensify .1s steps(5) infinite;
+  -webkit-animation: intensify .1s steps(5) infinite;
+}
+
+a[href="/intensifies2"]:before {
+  content: " ";
+}
+
+a[href="/intensifies2"]:after {
+  content: " ";
+}
+
+@keyframes intensify {
+ 0% { margin-left: 0px; }
+ 100% { margin-left: 80px; }
+}
+
+@-webkit-keyframes intensify {
+ 0% { margin-left: 0px; }
+ 100% { margin-left: 80px; }
+}
