--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -261,14 +261,14 @@ a[href|="/male3"] {
     background-image: url(%%male3%%)
     }
 
-a[href|="/male4"] {
+a[href|="/swordsmug"] {
     display: block;
     clear: none;
     float: left;
-    width: 70px;
-    height: 110px;
+    width: 86px;
+    height: 80px;
     background-repeat: no-repeat;
-    background-image: url(%%male4%%)
+    background-image: url(%%swordsmug%%)
     }
 
 a[href|="/male5"] {
@@ -431,14 +431,14 @@ a[href|="/male20"] {
     background-image: url(%%male20%%)
     }
 
-a[href|="/female1"] {
+a[href|="/swordattack"] {
     display: block;
     clear: none;
     float: left;
-    width: 70px;
-    height: 110px;
+    width: 150px;
+    height: 136px;
     background-repeat: no-repeat;
-    background-image: url(%%female1%%)
+    background-image: url(%%swordattack%%)
     }
 
 a[href|="/female2"] {
