--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -200,15 +200,15 @@ h3.imgTitle{
 .side a[href="/r/MLPLounge/new/"]
 {
  display:block;
- width:73px;
- height:80px;
- background:url(%%filly-twilight%%);
+ width:75px;
+ height:70px;
+ background:url(%%lyra%%);
  position:fixed; 
- top:290px;
+ top: 290px;
  right:-5px;
  z-index:999
 }
-body{background:url(%%background%%) no-repeat fixed center center}
+body{background:url(%%twilightbackground%%) no-repeat fixed center center}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
 .content .md h1:before{content:">"}
 /*New post spam filtered warning*/
