--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -406,7 +406,7 @@ a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"],
 {background-image:url(%%150x150b%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150c 'motes */
-a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletariat"], a[href|="/pinkiefly"], a[href|="/greatandpowerfuldinky"]
+a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletariat"], a[href|="/pinkiefly"], a[href|="/greatandpowerfuldinky"], a[href|="/redheart"]
 {background-image:url(%%150x150c%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -447,7 +447,7 @@ a[href|="/twidorable"], a[href|="/nerdcheese"], a[href|="/50scoco"], a[href|="/5
 {background-image:url(%%misfitse%%);display:block;float:left;}
 
 /* Misfits f */
-a[href|="/sleepyrarijack"], a[href|="/disapproveowl"], a[href|="/smugspike"], a[href|="/flashsentry"], a[href|="/medicredheart"]
+a[href|="/sleepyrarijack"], a[href|="/disapproveowl"], a[href|="/smugspike"], a[href|="/flashsentry"], a[href|="/medicredheart"], a[href|="/imagination"], a[href|="/redheartbutt"], a[href|="/fluttershibe"], a[href|="/graceful"], a[href|="/applejaguar"], a[href|="/happynurse"]
 {background-image:url(%%misfitsf%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -471,7 +471,7 @@ a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href
 {background-position: -100% -100%;}
 
 /* Grid pos 2,1 'motes */
-a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"]
+a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"], a[href|="/redheart"]
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
@@ -771,3 +771,9 @@ a[href|="/disapproveowl"] {width:79px;height:100px;background-position: -146px 0
 a[href|="/smugspike"] {width:75px;height:100px;background-position: -225px 0;}
 a[href|="/flashsentry"] {width:85px;height:100px;background-position: -300px 0;}
 a[href|="/medicredheart"] {width:142px;height:175px;background-position: -385px 0;}
+a[href|="/imagination"] {width:200px;height:154px;background-position: -185px -100px;}
+a[href|="/redheartbutt"] {width:150px;height:126px;background-position: -550px 0;}
+a[href|="/fluttershibe"] {width:132px;height:150px;background-position: 0 -200px;}
+a[href|="/graceful"] {width:149px;height:200px;background-position: -551px -126px;}
+a[href|="/applejaguar"] {width:200px;height:158px;background-position: 0 -542px;}
+a[href|="/happynurse"] {width:117px;height:150px;background-position: -434px -175px;}
