--- a/source-css/scratchquisition.css
+++ b/source-css/scratchquisition.css
@@ -431,6 +431,16 @@ a[href|="/wubintensifies"]
     height: 100px;
 }
 
+a[href|="/scratchglomp"]
+{
+ background-image: url(%%scratchglomp%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 193px;
+    height: 150px;
+}
+
 /*Other emotes*/
 a[href|="/helixfossil"] 
 {
