--- a/source-css/mylittlealcoholic.css
+++ b/source-css/mylittlealcoholic.css
@@ -484,3 +484,5 @@ a.author[href$=Gyroburner]:after {
 a.author[href$=Some_wanderer]:after {
     content: " [900th drunk little pony]"
     }
+
+body a[href="/spoiler"],body a[href="/sp"]{background:black!important;color:black!important}
